frontend/test/should_fail/rhs_edge1_nested.grg
rule r
{
	x:Node;

	alternative {
		case1 {
			modify {
				y:Node -e-> y;
			}
		}
	}

	modify {
		x -e:Edge-> x;
	}
}
